--- a/index.html
+++ b/index.html
@@ -878,6 +878,7 @@
             <li><a href="#home" class="nav-link active">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#experience" class="nav-link">Experience</a></li>
+              <li><a href="#Education" claszs="nav-link">Education</a></li>
             <li><a href="#skills" class="nav-link">Skills</a></li>
             <li><a href="#achievements" class="nav-link">Awards</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -931,15 +932,15 @@
                 </div>
             </div>
             <div class="glass-card about-text">
-                <p>
-                    As a Senior Data Analyst with over 5+ years of experience, I specialize in building robust data pipelines and creating insightful analytics solutions. My expertise spans across the entire data lifecycle, from collection and processing to visualization and deployment.
-                </p>
-                <p>
-                    Currently serving at Pakistan Air Force HQ, Successfully delivered 50+ critical decision-making dashboards, enabling data-driven insights and improving strategic decision-making across multiple business functions. My passion lies in transforming complex data into actionable insights that drive strategic decision-making.
-                </p>
-                <p>
-                    I'm proficient in modern data technologies for data tranformation including Python, SQL, Pyspark, Power Query and Dax. My goal is to help organizations harness the power of their data to achieve measurable business outcomes.
-                </p>
+            <p>  As a Senior Data Analyst with over 5 years of experience, I specialize in building robust data pipelines and delivering advanced analytics solutions. My expertise covers the complete data lifecycle—spanning data collection, transformation, visualization, and deployment.</p>
+
+<p>Currently, I am serving at Pakistan Air Force HQ, where I have successfully delivered 50+ critical decision-making dashboards. These solutions have empowered leadership with data-driven insights and significantly enhanced strategic decision-making across multiple business functions.</p>
+
+<p>I hold a Master of Science (MS) and a Bachelor of Science (BS) in Computer Science from Bahria University, Islamabad, Pakistan.</p>
+
+<p>My technical proficiency includes modern tools and technologies for data transformation and analytics, such as Python, SQL, PySpark, Power Query, and DAX.</p>
+
+<p>Driven by a passion for turning complex data into actionable insights, my goal is to help organizations unlock the full potential of their data and achieve measurable business outcomes.</p>
             </div>
         </div>
     </section>
@@ -969,6 +970,30 @@
                 <p class="description">
                  I worked in the Software Development Section, contributing to the design and implementation of applications.</p>
             </div>
+        </div>
+    </section>
+    
+
+ <section id="Education">
+        <h2 class="section-title animate-on-scroll"><i class="fas fa-graduation-cap"></i>Education</h2>
+        <div class="achievements-grid animate-on-scroll">
+            <div class="glass-card achievement-card">
+                <div class="achievement-icon">
+                    <i class="fas fa-user-graduate edu-icon"></i>
+                </div>
+                <h3>Master's in Computer Science</h3>
+                <p>Bahria University, Islamabad </p>
+                <p>CGPA: 3.05 / 4</p>
+            </div>
+            <div class="glass-card achievement-card">
+                <div class="achievement-icon">
+                    <i class="fas fa-certificate edu-icon"></i>
+                </div>
+                <h3>Bachelor's in Computer Science</h3>
+                <p>Bahria University, Islamabad</p>
+                <p>CGPA: 2.84 / 4</p>
+            </div>
+          
         </div>
     </section>
 
